# RecallLayer

./: .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: FUNDING.yml
config/: config.yaml.example
docs/: api-surface-policy.md  api.md  architecture-flow.md  architecture.md  benchmark-cache-sprint-4.md  benchmark-guide.md  benchmark-ladder.md  benchmark-plan.md  benchmark-proof-pack.md  benchmark-proof-story.md  best-api-demo.md  best-api.md  canonical-path.md  canonical-workflow.md  cluster-benchmark.md  compaction.md  current-surfaces.md  data-model.md  deprecations.md  dev-commands.md  filter-indexes.md  flush-lifecycle.md  highdim-benchmark.md  implementation-plan.md  inspected-api.md  integration-contract.md  issue-compaction-replay-watermark.md  issue-flush-lifecycle.md  issue-hybrid-tombstone-masking.md  legacy-paths.md  manual-sync.md  measured-api.md  observed-api.md  observed-vs-traced.md  postgres-live-harness.md  postgres-recalllayer-architecture.md  pr-description.md  proof-checklist.md  proof-status-snippet.md  prove-it-works.md  (+16 more)
examples/: postgres_sidecar_flow.py  postgres_sidecar_live.py  quickstart.py
reports/: README.md  benchmark-matrix.json  benchmark-matrix.md  cache_sprint4_benchmark.md  quantizer-tradeoffs.json  quantizer-tradeoffs.md  sprint5_benchmark.md
scripts/: demo_best_api_flow.py  demo_filter_planner.py  demo_measured_api_flow.py  export_all_reports.py  export_benchmark_diagnostics.py  export_benchmark_markdown.py  export_benchmark_report.py  run_best_api.py  (+29 more)
(+291 files in other folders)
